[Liverpool] Fix main nav position on smaller screens

--- a/web/cobrands/liverpool/_liverpool.scss
+++ b/web/cobrands/liverpool/_liverpool.scss
@@ -35,6 +35,13 @@ input[type=text], input[type=password], input[type=email], textarea {
     }
 }
 
+@media only screen and (min-width: 48em) and (max-width: 61em) {
+    #main-nav {
+        float: none;
+        padding-left: 0;
+    }
+}
+
 #main-nav ul#main-menu li {
     a {
         color: #373b43;
